# DESDEO

./: .gitignore  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  add_dm_group_for_forest_problem.py  check_black.sh  check_flake8.sh  check_isort.sh  check_mypy.sh  conftest.py  desdeo-s2i-buildimage.Dockerfile  download_problem_from_database.py  gnimbus_production_db_init.py  group_df.ipynb  justfile  karttajuttuja.ipynb  make_requirements.sh  mkdocs.rtd.yml  mkdocs.yml  package-lock.json  package.json  paper.bib  paper.md  pyproject.toml  read_json_problem.py  requirements-dev.txt  requirements.txt  run_fullstack.py  run_fullstack.sh  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  idea-discussion.md
.github/workflows/: docs_notebook_cache.yml  draft-pdf.yml  pre_commit.yaml  publish.yaml  test.yaml  unit_tests.yaml  webui_tests.yaml
.s2i/: environment
ANOVA-MOP/: ANOVAMOP.m  README.md
ANOVA-MOP/CommonFiles/: CartesianProduct.m  MapSamples.m  MyFun.m  P_objective.m  SubProblem.m
ANOVA-MOP/DecisionMaking/: ASF.m
ANOVA-MOP/Decomposition/: BestDecomposition.m  Ding_dependency_analysis.m  Ding_partition_analysis.m  display_matrix.m  display_solution.m  display_tree.m  get_col_solution.m  get_complexity.m  get_rcm.m  rcm2tree.m  tree2seq.m
ANOVA-MOP/Metamodeling/: MultivariateLegendre.m  MultivariateLegendre2.m  SequentialLegendreChaosSensitivityAnalysis.m  SurrogatePrediction.m  buildingblocks.m  evalfunc.m  orthonormal_polynomial_legendre.m
ANOVA-MOP/Solvers/: Direct.m
BenchExp/: experiment.ipynb  pymoo_server.py  pymoo_simulator.py
SCOREBands/: SCOREbands.ipynb  energy.parquet
datasets/: forest_holding_4.csv  prices_summer.npz  river_poll_4_objs.csv  river_poll_5_objs.csv  river_pollution_non_dom.parquet  sustainability_spanish.csv
datasets/MetallApplication/: charpydata.csv  elondata.csv  utsdata.csv  ysdata.csv
datasets/emoTemplates/: ibea.json  nsga3.json  rvea.json
datasets/forestProblemWithMetadata/: key.json
datasets/problemModels/: LukeProblemWithPreferences.json  MetallAppl.json  luke_problem.json  utopia_forest_allreal.json
deploy/: api-buildconfig.yaml  api-deployment.yaml  api-imagestream.yaml  builder-buildconfig.yaml  builder-imagestream.yaml  db-init-job.yaml  postgres.yaml  secrets-template.yaml  webui-buildconfig.yaml  webui-deployment.yaml  webui-imagestream.yaml
desdeo/: __init__.py  core.py  warnings.py
desdeo/adm/: ADMAfsar.py  ADMChen.py  BaseADM.py  __init__.py  adm_afsar.py  adm_chen.py  base_adm.py
desdeo/api/: GDM-documentation.md  README.md  __init__.py  app.py  auth_config.py  config.py  config.toml  db.py  db_config.py  db_init.py  db_init_gdm.py  db_init_prod.py  db_init_summer_cabin.py  db_init_xnimbus.py  db_models.py  gnimbus_db_init.py  gnimbus_get_results.py  initialize_db.py  malaga_db_init.py  schema.py  utopia_db_init.py
desdeo/core/: ResultFactory.py  __init__.py  core.py
desdeo/emo/: __init__.py  recombination.py
desdeo/explanations/: __init__.py  explainer.py  lagrange.py  rules.py  utils.py
desdeo/gdm/: __init__.py  gdmtools.py  score_bands.py  voting_rules.py
desdeo/mcdm/: __init__.py  cumulus.py  enautilus.py  gnimbus.py  nautili.py  nautilus.py  nautilus_navigator.py  nimbus.py  nonconvex_pareto_navigator.py  pareto_navigator.py  reference_point_method.py  rpm_evolutionary.py
desdeo/method/: Method.py  NAUTILUS.py  NIMBUS.py  __init__.py  base.py
desdeo/optimization/: OptimizationMethod.py  OptimizationProblem.py  __init__.py
desdeo/preference/: PreferenceInformation.py  __init__.py  base.py  direct.py  nimbus.py
desdeo/problem/: Problem.py  RangeEstimators.py  Solution.py  __init__.py  cvxpy_evaluator.py  evaluator.py  gurobipy_evaluator.py  gurobipy_model_extension.py  infix_parser.py  json_parser.py  parser.py  porcelain.py  pyomo_evaluator.py  pyomo_parser.py  scenario.py  schema.py  simulator_evaluator.py  simulator_file.py  simulator_file2.py  surrogate.py  surrogate2.py  sympy_evaluator.py  testproblems.py  toy.py  utils.py
desdeo/result/: Result.py  __init__.py
desdeo/tools/: __init__.py  (+33 more)
docs/: 404.rst  Makefile  api.rst  conf.py  contributing.rst  desdeo.core.rst  desdeo.method.rst  desdeo.optimization.rst  desdeo.preference.rst  desdeo.problem.rst  desdeo.result.rst  desdeo.rst  desdeo.utils.rst  glossary.rst  guides.rst  hooks.py  index.md  index.rst  introduction.rst  macros.py  make.bat  modelling.rst  modules.rst  requirements.txt  software.rst
examples/: AuxiliaryServices.py  Generator.py  NarulaWeistroffer.py  article-nautilus.py  article_nautilus.py  naru-weis.py  riverrobust.py
notebooks/: adm.ipynb  scenarios.ipynb
output/: adm_phi_log.json
scripts/: add_dm_group_for_problem.py  download_database.py  download_problem_from_database.py  gen_erd.py  gen_openapi.py
tests/: .env.test  conftest.py  example_problem.json  json_problems.py  run_adm_phi_pipeline.py  test_NIMBUS.py  test_NNAUTILUS.py  test_adm.py  test_api_config.py  test_asf_selector.py  test_cake_problem.py  test_cumulus.py  test_cvxpy_solver.py  test_ea.py  test_ea_config.py  test_elitist_selection.py  test_emo_generators.py  test_enautilus.py  test_explainer.py  test_explanations_utils.py  test_external_problems.py  test_forest_nimbus_intermediate.py  test_generic_evaluator.py  test_gnimbus.py  test_gurobipy_solver.py  test_indicators.py  test_infix_parser.py  test_json_parser.py  test_json_parser_vectors.py  test_kkt_multipliers.py  test_lagrange_utils.py  test_learning_mode.py  test_multi_valued_constraints.py  test_nautili.py  test_nautilus.py  test_nautilus_navigator.py  test_ng_solvers.py  test_nimbus.py  test_non_dominated_sort.py  test_optuna_solvers.py  (+28 more)
utopia/: utopia_problem.py
webui/: .gitignore  Dockerfile  README.md  components.json  eslint.config.js  orval.config.mjs  orval.config.ts  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+620 files in other folders)
