[project]
name = "desdeo"
version = "2.6.0"
description = "DESDEO is a modular and open source framework for interactive multiobjective optimization."
authors = [
    { name = "Giovanni Misitano", email = "giovanni.a.misitano@jyu.fi" },
    { name = "Bhupinder Saini", email = "bhupinder.s.saini@jyu.fi" },
]
license = "MIT"
readme = "README.md"
exclude = ["tests", "desdeo/api", "desdeo/utopia_stuff"]
keywords = [
    "optimization",
    "decision-support",
    "multiobjective optimization",
    "evolutionary optimization",
    "interactive methods",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy >= 2.2.0, < 2.4", # nevergrad 1.0.12 metamodel does float(model.predict(...)); numpy>=2.4 rejects size-1 ndim>0 -> scalar conversion
    "scipy >= 1.11.4",
    "polars >= 1.41",
    "pyarrow >= 20.0.0",
    "numba >= 0.61.0",
    "pydantic >= 2.9",
    "pydantic-settings >= 2.9",
    "sympy >= 1.0",
    "plotly>=6.0",
    "pyparsing >= 3.0",
    "nevergrad >= 1.0.12",
    "bayesian-optimization >= 1.0", # effectively held at 1.4.0: nevergrad 1.0.12 hard-pins bayesian-optimization==1.4.0, so v2/v3 cannot be installed until nevergrad relaxes it
    "pyomo >= 6.8",
    "gurobipy >= 12.0.0",
    "tsp-solver >= 0.1",
    "greenlet >= 3.1.1",
    "pymoo >= 0.6.1.2",
    "shap >= 0.47.0",
    "requests >= 2.32.0",
    "cvxpy[scip]>=1.8.0,<1.9", # 1.9 regresses solver precision apparently?
    "moocore >= 0.1.7",
    "websockets>=15.0.1",
    "coco-experiment>=2.8.2",
    "imodels>=2.0.4",
]

[project.urls]
homepage = "https://github.com/industrial-optimization-group/DESDEO"
repository = "https://github.com/industrial-optimization-group/DESDEO"
documentation = "https://desdeo.readthedocs.io/en/latest/"
"Bug tracker" = "https://github.com/industrial-optimization-group/DESDEO/issues"

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-xdist>=3.5.0",
    "pytest-testmon>=2.1.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=5.0.0",
    "snakeviz>=2.2.0",
    "pre-commit>=4.5.1",
    "rust-just>=1.49.0",
]

docs = [
    "mkdocs>=1.0",
    "mkdocs-material>=9.5.12",
    "mkdocstrings-python>=1.0",
    "mkdocs-macros-plugin>=1.0.5",
    "mkdocs-jupyter>=0.26.3",
    "mkdocs-include-markdown-plugin[cache]>=7.0.0",
    "neoteroi-mkdocs>=1.1.2",
    "griffe>=1.4.1,<2",
    "python-markdown-math>=0.9",
    "mkdocs-llmstxt>=0.5.0",
]

jupyter = ["jupyter>=1.0", "jupyterlab>=4.0", "jupytext>=1.16.4"]

web = [
    "httpx>=0.28.1",
    "fastapi>=0.115.12",
    "python-jose[cryptography]>=3.4.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "bcrypt>=4.3.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.24",
    "websockets>=15.0.1",
]

viz = ["seaborn>=0.13.0", "scienceplots>=2.1.1", "pyparsing[diagrams]>=3.1.1"]

tools = ["djlint>=1.34.1", "eralchemy>=1.5.0"]

server = [ # production!
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
]

stochastic = [
    "sortedcollections",
    "mpi4py>=3.0.3",                                         # Need mpi installed on your system before installing this
    "mpi-sppy@ git+https://github.com/juropo/mpi-sppy@main",
]

all-dev = [
    { include-group = "dev" },
    { include-group = "docs" },
    { include-group = "jupyter" },
    { include-group = "web" },
    { include-group = "viz" },
    { include-group = "tools" },
]

[tool.poetry.group.server]
optional = true


[tool.uv]
default-groups = ["dev", "docs", "jupyter", "web", "viz", "tools"]
# Pin the cma version: 4.4.2+ regresses NGOpt's stochastic stability?
constraint-dependencies = ["cma==4.4.1"]

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
lint.select = [
    "E",
    "F",
    "W",
    "C901",
    "D",
    "UP",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "T20",
    "PIE",
    "RET",
    "PTH",
    "SIM",
    "PL",
    "TRY",
    "FURB",
    "LOG",
    "NPY",
    "RUF",
    "I",
    "N",
]
lint.ignore = [
    "COM812",  # Enforcing trailing commas is too annoying.
    "FBT001",  # "boolean typed pos arg"
    "FBT002",  # "boolean default pos"
    "PLR0911", # "too many return statements (>6)"
    "PLR0912", # "too many branches"
    "PLR0913", # "too many function args"
    "PLR0915", # "too many statements (>50)"
    "TRY003",  # allow long error messages
]
lint.pydocstyle.convention = "google"


# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]
lint.unfixable = []

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"**/tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
]
# Deprecated module scheduled for removal at the end of September 2026. Its name
# is the public import path users are being migrated away from, so renaming it
# to satisfy N999 would be counterproductive.
"desdeo/emo/methods/EAs.py" = ["N999"]
# Public module whose camelCase name predates the snake_case convention. Renaming
# it is a breaking change for importers and is left as a separate follow-up.
"desdeo/tools/generateReferencePoints.py" = ["N999"]
# The backend dispatch tables map operators to `lambda x: backend.fn(x)` wrappers
# on purpose: the lambda defers the attribute lookup so that unsupported operations
# (e.g. cvxpy has no `arccos`) only error when actually used, not at table construction.
# Inlining them (PLW0108's suggestion) breaks that deferral, so the rule is ignored here.
"desdeo/problem/json_parser.py" = ["PLW0108"]
# Notebooks legitimately use prints to display output and rarely need
# module/function docstrings or rigorous naming.
"**/*.ipynb" = [
    "T201",    # `print` found
    "D100",    # Missing docstring in public module
    "D103",    # Missing docstring in public function
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.format]
quote-style = "double"

[tool.djlint]
profile = "jinja"

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
markers = [
    "slow: mark test as slow",
    "nautilus_navigator: tests related to the NAUTILUS Navigator method",
    "infix_parser: tests related to the infix parser",
    "pyomo: tests related to pyomo models, their parsing, and evaluation",
    "sympy: tests related to sympy expressions, their parsing, and evaluatio.",
    "nautili: tests related to the NAUTILI method",
    "nautilus: tests related to the NAUTILUS method",
    "nevergrad: tests related to the nevergrad solvers and their interfaces",
    "scalarization: tests related to scalarization functions",
    "nimbus: tests related to the NIMBUS method",
    "gurobipy: tests related to the gurobipy solver",
    "cvxpy: tests related to the cvxpy solver",
    "pareto_navigator: tests related to the Pareto Navigator method",
    "patterns: tests related to the publisher-subscriber pattern",
    "forest_problem: tests related to the forest problem examples.",
    "group_scalarization: tests related to group scalarization functions and utilities.",
    "polars: tests related to the polars evaluator and math parser.",
    "rpm: tests related to the reference point method.",
    "scipy: tests that utilize any of the scipy optimizers.",
    "proximal: tests related to the proximal evaluator.",
    "api: tests related to the web API.",
    "json: tests related to the Math JSON parser.",
    "schema: tests related to the Problem schema.",
    "utils: tests related to various utilities.",
    "simulator_support: tests related to simulator and surrogate support",
    "explainer: tests related to explainers and related functionalities.",
    "explanation_utils: tests related to explanations module utilities.",
    "ea: tests related to evolutionary methods.",
    "indicators: tests related to indicators.",
    "testproblem: tests related to test problems.",
    "enautilus: tests related to the E-NAUTILUS method.",
    "gdmtools: tests related to group decision making.",
    "gnimbus: tests related to group nimbus method.",
    "external: tests related to providers interfacing to external problems.",
    "scenario: tests related to scenario-based optimization.",
    "fixme: tests that are not passing, but maybe should, yet are ignored.",
    "githubskip: skip these tests on GitHub workflows.",
]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
# nevergrad's NGOpt dispatches to CMA-ES, which emits a CMA InjectionWarning ("orphanated
# injected solution ...") for every discarded injected solution. This is internal optimizer
# bookkeeping (tens of thousands of messages in the scalarization tests), so it is silenced here.
filterwarnings = [
    "default::RuntimeWarning",
    "default::UserWarning",
    "ignore:orphanated injected solution",
    # nevergrad warns once per evaluation that the parametrization bounds are close relative to its
    # sigma ("Bounds are N sigma away ..."); the varying N defeats deduplication, so tens of thousands
    # of these flood the scalarization tests. It is a third-party tuning hint, not a DESDEO issue.
    "ignore:Bounds are .* sigma away",
    # nevergrad's metamodel calls float() on an ndim>0 array (NumPy 1.25 deprecation), emitting a
    # DeprecationWarning on every prediction (tens of thousands in the scalarization tests). It is a
    # third-party issue in nevergrad, not DESDEO, and cannot be fixed here.
    "ignore:Conversion of an array with ndim",
]
testpaths = ["tests", "desdeo/api/tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyrefly]
project-includes = ["desdeo/", "tests/"]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "desdeo/api/tests/*", "desdeo/utopia_stuff/*"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
